syntax = "proto3";
package login.service.v1;
option go_package = "project-user/pkg/service/login.service.v1";

message CaptchaMessage{
  string mobile = 1;
}

message CaptchaResponse{
  string code = 1;

}

service LoginService{
  rpc GetCaptcha(CaptchaMessage) returns (CaptchaResponse) {}
}

//  go get google.golang.org/protobuf/cmd/protoc-gen-go
//  go get google.golang.org/grpc

//  先生成到一个固定目录里
//  cd 到 project-user/api/proto
//  protoc --go_out=./gen --go_opt=paths=source_relative --go-grpc_out=./gen --go-grpc_opt=paths=source_relative .\login_service.proto
